ПЛАНИРОВЩИК ЗАДАЧ И ВСЯКАЯ ХРЕНЬ

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ node_modules/
 /backend/storage/
 
 /backend/prisma/migrations/
+migration_lock.toml
 
 # ===================================================================
 # Frontend
