--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-  "start": "node src/server.js",
-  "dev": "nodemon",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
+    "start": "node src/server.js",
+    "dev": "nodemon",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "prisma": {
     "seed": "node prisma/seed.js"
   },
@@ -18,9 +18,12 @@
     "@prisma/client": "^5.14.0",
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
+    "cron-parser": "^5.3.0",
     "express": "^4.19.2",
+    "fs-extra": "^11.3.0",
     "mineflayer": "^4.20.1",
     "multer": "^2.0.1",
+    "node-cron": "^4.1.0",
     "pidusage": "^3.0.2",
     "prisma": "^5.14.0",
     "semver": "^7.6.2",
