--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cron-parser": "^5.3.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.514.0",
     "monaco-editor": "^0.52.2",
