--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,10 @@
     "prisma": "^5.14.0",
     "semver": "^7.6.2",
     "socket.io": "^4.7.5",
-    "socks": "^2.8.5"
+    "socks": "^2.8.5",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.2",
