--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,8 @@
     "socks": "^2.8.5",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.2",
