--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
   "name": "blockmine",
-  "version": "1.3.2",
+  "version": "1.3.22",
   "description": "Мощная панель управления ботами для Майнкрафта.",
   "author": "merka",
   "license": "MIT",
@@ -26,9 +26,9 @@
   ],
   "scripts": {
     "dev": "concurrently \"npm run dev --workspace=backend\" \"npm run dev --workspace=frontend\"",
-    "postinstall": "npm install --workspaces --ignore-scripts && prisma generate --schema=./backend/prisma/schema.prisma",
+    "postinstall": "npm install --workspaces --ignore-scripts && npx prisma generate --schema=./backend/prisma/schema.prisma",
     "build": "npm run build --workspace=frontend",
-    "prepublishOnly": "npm run build && prisma generate --schema=./backend/prisma/schema.prisma"
+    "prepublishOnly": "npm run build && npx prisma generate --schema=./backend/prisma/schema.prisma"
   },
   "dependencies": {
     "prisma": "^5.14.0"
