--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.14.0",
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
+    "bcryptjs": "^3.0.2",
     "cron-parser": "^5.3.0",
     "express": "^4.19.2",
     "fs-extra": "^11.3.0",
