--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
-
 {
   "name": "blockmine",
-  "version": "1.4.1",
+  "version": "1.4.3",
   "description": "Мощная панель управления ботами для Майнкрафта.",
   "author": "merka",
   "license": "MIT",
@@ -26,12 +25,27 @@
   ],
   "scripts": {
     "dev": "concurrently \"npm run dev --workspace=backend\" \"npm run dev --workspace=frontend\"",
-    "postinstall": "npm install --workspaces --ignore-scripts && npx prisma generate --schema=./backend/prisma/schema.prisma",
+    "postinstall": "npm install --workspace=frontend --ignore-scripts && prisma generate --schema=./backend/prisma/schema.prisma",
     "build": "npm run build --workspace=frontend",
-    "prepublishOnly": "npm run build && npx prisma generate --schema=./backend/prisma/schema.prisma"
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "prisma": "^5.14.0"
+    "@prisma/client": "^5.14.0",
+    "adm-zip": "^0.5.16",
+    "archiver": "^7.0.1",
+    "bcryptjs": "^2.4.3",
+    "cron-parser": "^5.3.0",
+    "express": "^4.19.2",
+    "fs-extra": "^11.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mineflayer": "^4.20.1",
+    "multer": "^2.0.1",
+    "node-cron": "^4.1.0",
+    "pidusage": "^3.0.2",
+    "prisma": "^5.14.0",
+    "semver": "^7.6.2",
+    "socket.io": "^4.7.5",
+    "socks": "^2.8.5"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
