--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.2",
+    "react-window": "^1.8.11",
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
