--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
     "bcryptjs": "^2.4.3",
+    "cmdk": "^1.1.1",
     "cron-parser": "^5.3.0",
     "express": "^4.19.2",
     "fs-extra": "^11.3.0",
