--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "node-cron": "^4.1.0",
     "pidusage": "^3.0.2",
     "prisma": "^5.14.0",
+    "react-textarea-autosize": "^8.5.9",
     "react-virtualized-auto-sizer": "^1.0.26",
     "semver": "^7.6.2",
     "socket.io": "^4.7.5",
