--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,10 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.2"
+  },
+  "dependencies": {
+    "express-validator": "^7.2.1",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0"
   }
 }
