--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "reactflow": "^11.11.4",
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.5"
