--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-virtualized-auto-sizer": "^1.0.26",
     "semver": "^7.6.2",
     "socket.io": "^4.7.5",
-    "socks": "^2.8.5"
+    "socks": "^2.8.5",
+    "sonner": "^2.0.5"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
