--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cmdk": "^1.1.1",
     "cron-parser": "^5.3.0",
     "express": "^4.19.2",
+    "framer-motion": "^12.19.2",
     "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
     "mineflayer": "^4.20.1",
