--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "blockmine",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "Мощная панель управления ботами для Майнкрафта.",
   "author": "merka",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/blockmineJS/blockmine.git"
+    "url": "git+https://github.com/blockmineJS/blockmine.git"
   },
   "bin": {
     "blockmine": "backend/cli.js"
@@ -41,11 +41,13 @@
     "express-validator": "^7.2.1",
     "framer-motion": "^12.19.2",
     "fs-extra": "^11.3.0",
+    "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
     "mineflayer": "^4.20.1",
     "multer": "^2.0.1",
     "node-cron": "^4.1.0",
     "pidusage": "^3.0.2",
+    "pino": "^9.7.0",
     "prisma": "^5.14.0",
     "react-textarea-autosize": "^8.5.9",
     "react-virtualized-auto-sizer": "^1.0.26",
