--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blockmine",
-  "version": "1.5.5",
+  "version": "1.5.6",
   "description": "Мощная панель управления ботами для Майнкрафта.",
   "author": "merka",
   "license": "MIT",
@@ -30,6 +30,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-icons": "^1.3.2",
     "adm-zip": "^0.5.16",
@@ -44,6 +45,7 @@
     "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
     "mineflayer": "^4.20.1",
+    "monaco-editor": "^0.52.2",
     "multer": "^2.0.1",
     "node-cron": "^4.1.0",
     "pidusage": "^3.0.2",
@@ -53,6 +55,7 @@
     "react-textarea-autosize": "^8.5.9",
     "react-virtualized-auto-sizer": "^1.0.26",
     "semver": "^7.6.2",
+    "slugify": "^1.6.6",
     "socket.io": "^4.7.5",
     "socks": "^2.8.5",
     "sonner": "^2.0.5"
