--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "express-validator": "^7.2.1",
+
     "pino": "^9.7.0",
-    "pino-pretty": "^13.0.0",
+    "pino-pretty": "^13.0.0"
   }
 }
