fix: исправление конфигурации для отображения автора в changelog

--- a/.versionrc.json
+++ b/.versionrc.json
@@ -11,6 +11,9 @@
     { "type": "style",    "hidden": true },
     { "type": "test",     "hidden": true }
   ],
-  "commitPartial": ".changelog/commit.hbs",
+  "commitPartial": "{{> commitBody}}",
+  "writerOpts": {
+    "commitPartial": "{{#if scope}}**{{scope}}:** {{/if}}{{subject}} ([{{hash}}](https://github.com/blockmineJS/blockmine/commit/{{hash}})) - _{{authorName}}_\n"
+  },
   "skip": { "tag": true }
 }
