chore: tak ly4IIIe

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: 🐛 Сообщение об ошибке (Bug Report)
 description: Создайте отчет, чтобы помочь нам улучшить проект BlockMine.
-title: "[БАГ] Краткое описание проблемы"
+title: "[Bug] Краткое описание проблемы"
 labels: ["bug", "needs-triage"]
 body:
   - type: markdown
