--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -22,7 +22,7 @@ body:
   - type: textarea
     id: steps-to-reproduce
     attributes:
-      label: Шаги для воспроизведения
+      label: Шаги для воспроизведения (Необязательно)
       description: Опишите по шагам(Если необходимо), как можно столкнуться с этой ошибкой.
       placeholder: |
         1. Перейдите в 'Настройки' конкретного бота.
@@ -35,7 +35,7 @@ body:
   - type: textarea
     id: expected-behavior
     attributes:
-      label: Ожидаемое поведение
+      label: Ожидаемое поведение (Необязательно)
       description: Что, по вашему мнению, должно было произойти?
       placeholder: Настройки должны были сохраниться, и должно было появиться уведомление об успехе.
     validations:
@@ -44,14 +44,14 @@ body:
   - type: textarea
     id: screenshots
     attributes:
-      label: Скриншоты или Видео
+      label: Скриншоты или Видео (Необязательно)
       description: Если возможно, приложите скриншоты или видео, демонстрирующие проблему. Вы можете просто перетащить файлы в это поле.
       placeholder: "Вы можете перетащить файлы сюда."
 
   - type: textarea
     id: environment
     attributes:
-      label: Ваше окружение
+      label: Ваше окружение (Необязательно)
       description: Укажите информацию о вашей системе.
       value: |
         - **Версия BlockMine:** [например, 1.17.1]
@@ -63,6 +63,6 @@ body:
   - type: textarea
     id: additional-context
     attributes:
-      label: Дополнительный контекст и логи
+      label: Дополнительный контекст и логи (Необязательно)
       description: Есть ли что-то еще, что нам стоит знать об этой проблеме? Логи из консоли браузера (F12) или терминала, где запущена панель, будут очень полезны!
       render: shell
