refactor: большой рефакторинг бэкенд части

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ com.txt
 
 node_modules/
 
+# Test coverage reports
+coverage/
+**/coverage/
+
 # ===================================================================
 # Backend
 # ===================================================================
