--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,17 +28,12 @@ jobs:
       - name: Run tests with coverage
         run: npm run test:coverage --workspace=backend
 
-      - name: Generate Coverage Badge
-        uses: cicirello/jacoco-badge-generator@v2
-        with:
-          badges-directory: badges
-          generate-coverage-badge: true
-          coverage-badge-filename: coverage.svg
-
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
           files: ./backend/coverage/lcov.info
           flags: backend
           name: backend-coverage
-          fail_ci_if_error: true
+          fail_ci_if_error: false
