--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "express-validator": "^7.2.1",
     "lru-cache": "^10.4.3",
     "pino": "^9.7.0",
-    "pino-pretty": "^13.0.0"
+    "pino-pretty": "^13.0.0",
+    "zod": "^4.1.12"
   }
 }
