--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "ts-jest": "^29.4.5"
   },
   "dependencies": {
+    "@octokit/rest": "^22.0.1",
     "awilix": "^12.0.5",
     "date-fns": "^4.1.0",
     "express-rate-limit": "^8.2.1",
