--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,8 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
