--- a/backend/package.json
+++ b/backend/package.json
@@ -30,9 +30,11 @@
     "@octokit/rest": "^22.0.1",
     "awilix": "^12.0.5",
     "date-fns": "^4.1.0",
+    "diff": "^8.0.2",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.2.1",
     "lru-cache": "^10.4.3",
+    "openrouter-kit": "^0.1.81",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
     "zod": "^4.1.12"
