--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.2",
+    "react-syntax-highlighter": "^16.1.0",
     "react-window": "^1.8.11",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.3",
