--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "diff": "^8.0.2",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.2.1",
+    "google-ai-kit": "^1.1.3",
     "lru-cache": "^10.4.3",
     "openrouter-kit": "^0.1.81",
     "pino": "^9.7.0",
