--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cron-parser": "^5.3.0",
+    "diff": "^8.0.2",
     "immer": "^10.1.1",
     "lucide-react": "^0.514.0",
     "monaco-editor": "^0.52.2",
