--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@reactflow/node-toolbar": "^1.2.1",
     "@tanstack/react-virtual": "^3.13.12",
+    "@tweenjs/tween.js": "^23.1.3",
     "ansi-to-html": "^0.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -42,8 +43,10 @@
     "diff": "^8.0.2",
     "immer": "^10.1.1",
     "lucide-react": "^0.514.0",
+    "minecraft-data": "^3.100.0",
     "monaco-editor": "^0.52.2",
     "path-browserify": "^1.0.1",
+    "prismarine-viewer": "^1.33.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
@@ -57,6 +60,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.128.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
     "zustand": "^5.0.5"
