--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@octokit/rest": "^22.0.1",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-icons": "^1.3.2",
     "adm-zip": "^0.5.16",
@@ -44,14 +45,19 @@
     "bcryptjs": "^2.4.3",
     "cmdk": "^1.1.1",
     "cron-parser": "^5.3.0",
+    "date-fns": "^4.1.0",
+    "diff": "^8.0.2",
     "express": "^4.19.2",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.2.1",
     "framer-motion": "^12.19.2",
     "fs-extra": "^11.3.0",
+    "google-ai-kit": "^1.1.3",
     "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
-    "mineflayer": "^4.20.1",
+    "lru-cache": "^10.4.3",
+    "mineflayer": "^4.33.0",
+    "mineflayer-pathfinder": "^2.4.5",
     "monaco-editor": "^0.52.2",
     "multer": "^2.0.1",
     "node-cron": "^4.1.0",
@@ -60,6 +66,7 @@
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
     "prisma": "^5.14.0",
+    "prismarine-viewer": "^1.33.0",
     "react-textarea-autosize": "^8.5.9",
     "react-virtualized-auto-sizer": "^1.0.26",
     "semver": "^7.6.2",
@@ -68,6 +75,7 @@
     "socks": "^2.8.5",
     "sonner": "^2.0.5",
     "systeminformation": "^5.27.7",
+    "vec3": "^0.1.10",
     "zod": "^4.1.13"
   },
   "devDependencies": {
